fixed issue with the subheader being out of place when resizing

--- a/Website/Crowbox/src/app/header/subheader/subheader.component.css
+++ b/Website/Crowbox/src/app/header/subheader/subheader.component.css
@@ -1,5 +1,6 @@
 .mat-toolbar{
     position: fixed;
+    top: 0vh;
     z-index: 100;
 
     background-color: #ededed; 
